# ridge_detector

sample/: CMakeLists.txt
sample/bin.win64.vc2015.dbg/: cv_cmdusage.ilk  cv_drawing_circle.ilk  cv_drawing_line.ilk  cv_gui_imageblendig.ilk  cv_image_info.ilk  cv_imread.ilk  cv_imwrite.ilk  cv_mat_create_print.ilk  idz.ilk  zams_idz.ilk
sample/build.win64.vc2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  cmake_install.cmake  polevoy_d_v.VC.VC.opendb  polevoy_d_v.sln
sample/build.win64.vc2015/prj/: cmake_install.cmake
sample/build.win64.vc2015/prj/cv_hello_word/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  cv_hello_word.sln  cv_hello_word.vcxproj  cv_hello_word.vcxproj.filters
sample/build.win64.vc2015/prj/tutorials/: cmake_install.cmake  cv_cmdusage.vcxproj  cv_cmdusage.vcxproj.filters  cv_drawing_circle.vcxproj  cv_drawing_circle.vcxproj.filters  cv_drawing_line.vcxproj  cv_drawing_line.vcxproj.filters  cv_gui_imageblendig.vcxproj  cv_gui_imageblendig.vcxproj.filters  cv_image_info.vcxproj  cv_image_info.vcxproj.filters  cv_imread.vcxproj  cv_imread.vcxproj.filters  cv_imwrite.vcxproj  cv_imwrite.vcxproj.filters  (+2 more)
sample/prj/: CMakeLists — копия.txt  CMakeLists.txt
sample/prj/cv_hello_word/: CMakeLists.txt  cv_hello_word.cpp
sample/prj/idz/: CMakeLists.txt  Maincpp.cpp  MeanShift.h  findContours_demo.cpp
sample/prj/zams_idz/: CMakeLists.txt  stdafx.cpp  stdafx.h  targetver.h  zams_idz.cpp  zams_idz.vcxproj  zams_idz.vcxproj.filters
(+64 files in other folders)
